--- a/Buoi1_Bai2_Thao_B1609548/app/src/main/res/layout/activity_main.xml
+++ b/Buoi1_Bai2_Thao_B1609548/app/src/main/res/layout/activity_main.xml
@@ -72,7 +72,7 @@
             android:layout_gravity="center"
             android:gravity="center"
             android:text="ẢNH ĐƯỢC CHỌN HIỂN THỊ"
-            android:textColor="#f01"
+            android:textColor="#FF0066"
             android:textStyle="bold"
             android:textSize="18sp"/>
     </LinearLayout>
