--- a/Buoi3_bai2_Thao_B1609548/app/src/main/res/layout/activity_2.xml
+++ b/Buoi3_bai2_Thao_B1609548/app/src/main/res/layout/activity_2.xml
@@ -52,6 +52,7 @@
             android:layout_height="wrap_content"
             android:text="Gọi Broadcast Receiver"
             android:textSize="25sp"
+            android:textColor="#0000ff"
             android:layout_alignParentBottom="true"/>
     </RelativeLayout>
 </LinearLayout>
