--- a/Buoi1_Bai1_Thao_B1609548/app/src/main/res/layout/activity_main.xml
+++ b/Buoi1_Bai1_Thao_B1609548/app/src/main/res/layout/activity_main.xml
@@ -35,6 +35,7 @@
         android:id="@+id/txtName"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:backgroundTint="#FF3366"
         android:hint="@string/ed_message">
     </EditText>
     <RadioGroup
@@ -46,11 +47,13 @@
             android:id="@+id/rb1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:buttonTint="#FF3366"
             android:text="@string/rb1"/>
         <RadioButton
             android:id="@+id/rb2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:buttonTint="#FF3366"
             android:text="@string/rb2"/>
     </RadioGroup>
     <LinearLayout
@@ -61,15 +64,21 @@
             android:id="@+id/chkAutosave"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:buttonTint="#FF3366"
             android:text="@string/chkautosave">
         </CheckBox>
         <CheckBox
             android:id="@+id/star"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:buttonTint="#FF3366"
             android:text="@string/star"/>
         <ToggleButton
             android:id="@+id/toggle1"
+            android:buttonTint="#FF3366"
+            android:textOff="OFF"
+            android:textOn="ON"
+            android:foregroundTint="#FF3366"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
     </LinearLayout>
@@ -100,13 +109,5 @@
             android:layout_height="100dp"
             android:visibility="invisible"/>
     </LinearLayout>
-<!--    <TextView-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:text="Hello World!"-->
-<!--        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--        app:layout_constraintLeft_toLeftOf="parent"-->
-<!--        app:layout_constraintRight_toRightOf="parent"-->
-<!--        app:layout_constraintTop_toTopOf="parent" />-->
 
 </LinearLayout>
